# one_life

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
